--- a/src/main.css
+++ b/src/main.css
@@ -347,3 +347,32 @@ a:active {
   color: #f6d4b1;
   border: #f6d4b1 solid 1px;
 }
+#messageBox {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  padding: 10px 15px;
+  background-color: #4CAF50; /* Success Green */
+  color: white;
+  font-size: 16px;
+  border-radius: 5px;
+  display: inline-block;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.hidden {
+  display: none;
+}
+
+.error {
+  background-color: #F44336; /* Error Red */
+}
+
+.info {
+  background-color: #2196F3; /* Info Blue */
+}
+
+.warning {
+  background-color: #FF9800; /* Warning Orange */
+}
